--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/TapLogo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GACHAGACHA</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/images/TapLogo.webp" />
+  <link rel="prefetch" as="font" href="/fonts/Pretendard-Regular.otf" type="font/otf" crossorigin />
+  <link rel="prefetch" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
+
+  <link rel="preload" as="image" href="/images/MainLogo.webp">
+  <link rel="prefetch" as="image" href="/images/Loading.webp">
+
+  <link rel="preload" as="image" href="/images/MiniHomeMain.webp">
+  <link rel="preload" as="image" href="/images/MiniHomeMain1.webp">
+  <link rel="preload" as="image" href="/images/MiniHomeItemBook.webp">
+  <link rel="preload" as="image" href="/images/MiniHomeAdornBackground.webp">
+  <link rel="preload" as="image" href="/images/MiniHomeAdornItem.webp">
+  <link rel="preload" as="image" href="/images/Explore.webp">
+  <link rel="preload" as="image" href="/images/Gacha.webp">
+  <link rel="preload" as="image" href="/images/GachaClose.webp">
+  <link rel="preload" as="image" href="/images/GachaOpen.webp">
+  <link rel="preload" as="image" href="/images/Market.webp">
+  <link rel="preload" as="image" href="/images/MarketItemModal.webp">
+  <link rel="preload" as="image" href="/images/MarketEnroll.webp">
+  <link rel="preload" as="image" href="/images/MarketSell.webp">
+  <link rel="preload" as="image" href="/images/MarketSellModal.webp">
+
+  <link rel="prefetch" as="image" href="/images/GachaSample.webp" />
+
+  <meta name="description" content="가챠를 통해 원하는대로 꾸며보아요!" />
+  <meta name="keywords" content="Gacha, Adorn, 뽑기, 꾸미기, 캡슐, 가챠" />
+  <meta property="og:title" content="GACHAGACHA" />
+  <meta property="og:description" content="가챠를 통해 아이템을 뽑고 꾸며보아요" />
+  <meta property="og:image" content="/MainLogo.webp" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ko_KR" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GACHAGACHA</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
