Refactor: 주요 이미지 preload 설정

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   <link rel="prefetch" as="font" href="/fonts/Pretendard-Regular.otf" type="font/otf" crossorigin />
   <link rel="prefetch" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
 
-  <link rel="preload" as="image" href="/images/MainLogo.webp">
+  <link rel="preload" as="image"  type="image/webp" href="/images/MainLogo.webp">
   <link rel="prefetch" as="image" href="/images/Loading.webp">
 
-  <link rel="preload" as="image" href="/images/MiniHomeMain.webp">
+  <link rel="prefetch" as="image" href="/images/MiniHomeMain.webp">
   <link rel="preload" as="image" href="/images/MiniHomeMain1.webp">
   <link rel="preload" as="image" href="/images/MiniHomeItemBook.webp">
   <link rel="preload" as="image" href="/images/MiniHomeAdornBackground.webp">
   <link rel="preload" as="image" href="/images/MiniHomeAdornItem.webp">
-  <link rel="preload" as="image" href="/images/Explore.webp">
-  <link rel="preload" as="image" href="/images/Gacha.webp">
+  <link rel="prefetch" as="image" href="/images/Explore.webp">
+  <link rel="prefetch" as="image" href="/images/Gacha.webp">
   <link rel="preload" as="image" href="/images/GachaClose.webp">
   <link rel="preload" as="image" href="/images/GachaOpen.webp">
-  <link rel="preload" as="image" href="/images/Market.webp">
+  <link rel="prefetch" as="image" href="/images/Market.webp">
   <link rel="preload" as="image" href="/images/MarketItemModal.webp">
   <link rel="preload" as="image" href="/images/MarketEnroll.webp">
   <link rel="preload" as="image" href="/images/MarketSell.webp">
