Feat: SEO 개선을 위한 Twitter-Card, OG 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="prefetch" as="font" href="/fonts/Pretendard-Regular.otf" type="font/otf" crossorigin />
   <link rel="prefetch" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
 
-  <link rel="preload" as="image"  type="image/webp" href="/images/MainLogo.webp">
+  <link rel="preload" as="image" type="image/webp" href="/images/MainLogo.webp">
   <link rel="prefetch" as="image" href="/images/Loading.webp">
 
   <link rel="prefetch" as="image" href="/images/MiniHomeMain.webp">
@@ -33,7 +33,13 @@
   <meta property="og:description" content="가챠를 통해 아이템을 뽑고 꾸며보아요" />
   <meta property="og:image" content="/MainLogo.webp" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gacha-ruddy.vercel.app/" />
   <meta property="og:locale" content="ko_KR" />
+
+  <meta name="twitter:card" content="/MainLogo.webp" />
+  <meta name="twitter:title" content="GACHAGACHA" />
+  <meta name="twitter:description" content="가챠를 통해 아이템을 뽑고 꾸며보아요" />
+  <meta name="twitter:image" content="/MainLogo.webp" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GACHAGACHA</title>
