--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/images/TapLogo.webp" />
-  <link rel="prefetch" as="font" href="/fonts/Pretendard-Regular.otf" type="font/otf" crossorigin />
-  <link rel="prefetch" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
+  <link rel="preload" as="font" href="/fonts/Pretendard-Regular.otf" type="font/otf" crossorigin />
+  <link rel="preload" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
 
   <link rel="preload" as="image" type="image/webp" href="/images/MainLogo.webp">
   <link rel="prefetch" as="image" href="/images/Loading.webp">
 
-  <link rel="prefetch" as="image" href="/images/MiniHomeMain.webp">
-  <link rel="preload" as="image" href="/images/MiniHomeMain1.webp">
-  <link rel="preload" as="image" href="/images/MiniHomeItemBook.webp">
-  <link rel="preload" as="image" href="/images/MiniHomeAdornBackground.webp">
-  <link rel="preload" as="image" href="/images/MiniHomeAdornItem.webp">
-  <link rel="prefetch" as="image" href="/images/Explore.webp">
-  <link rel="prefetch" as="image" href="/images/Gacha.webp">
-  <link rel="preload" as="image" href="/images/GachaClose.webp">
-  <link rel="preload" as="image" href="/images/GachaOpen.webp">
-  <link rel="prefetch" as="image" href="/images/Market.webp">
-  <link rel="preload" as="image" href="/images/MarketItemModal.webp">
-  <link rel="preload" as="image" href="/images/MarketEnroll.webp">
-  <link rel="preload" as="image" href="/images/MarketSell.webp">
-  <link rel="preload" as="image" href="/images/MarketSellModal.webp">
+  <link rel="preload" as="image" href="/images/MiniHomeMain.webp">
+  <link rel="preload" as="image" href="/images/Explore.webp">
+  <link rel="preload" as="image" href="/images/Gacha.webp">
+  <link rel="preload" as="image" href="/images/Market.webp">
 
-  <link rel="prefetch" as="image" href="/images/GachaSample.webp" />
+  <link rel="prefetch" as="image" href="/images/MiniHomeMain1.webp">
+  <link rel="prefetch" as="image" href="/images/MiniHomeItemBook.webp">
+  <link rel="prefetch" as="image" href="/images/MiniHomeAdornBackground.webp">
+  <link rel="prefetch" as="image" href="/images/MiniHomeAdornItem.webp">
+  
+  <link rel="prefetch" as="image" href="/images/GachaClose.webp">
+  <link rel="prefetch" as="image" href="/images/GachaOpen.webp">
+
+  <link rel="prefetch" as="image" href="/images/MarketItemModal.webp">
+  <link rel="prefetch" as="image" href="/images/MarketEnroll.webp">
+  <link rel="prefetch" as="image" href="/images/MarketSell.webp">
+  <link rel="prefetch" as="image" href="/images/MarketSellModal.webp">
 
   <meta name="description" content="가챠를 통해 원하는대로 꾸며보아요!" />
   <meta name="keywords" content="Gacha, Adorn, 뽑기, 꾸미기, 캡슐, 가챠" />
