--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="preload" as="font" href="/fonts/Pretendard-Bold.otf" type="font/otf" crossorigin />
 
   <link rel="preload" as="image" type="image/webp" href="/images/MainLogo.webp">
-  <link rel="prefetch" as="image" href="/images/Loading.webp">
+  <link rel="preload" as="image" href="/images/Loading.webp">
 
   <link rel="preload" as="image" href="/images/MiniHomeMain.webp">
   <link rel="preload" as="image" href="/images/Explore.webp">
   <link rel="preload" as="image" href="/images/Gacha.webp">
   <link rel="preload" as="image" href="/images/Market.webp">
 
-  <link rel="prefetch" as="image" href="/images/MiniHomeMain1.webp">
+  <!-- <link rel="prefetch" as="image" href="/images/MiniHomeMain1.webp">
   <link rel="prefetch" as="image" href="/images/MiniHomeItemBook.webp">
   <link rel="prefetch" as="image" href="/images/MiniHomeAdornBackground.webp">
   <link rel="prefetch" as="image" href="/images/MiniHomeAdornItem.webp">
@@ -26,7 +26,7 @@
   <link rel="prefetch" as="image" href="/images/MarketItemModal.webp">
   <link rel="prefetch" as="image" href="/images/MarketEnroll.webp">
   <link rel="prefetch" as="image" href="/images/MarketSell.webp">
-  <link rel="prefetch" as="image" href="/images/MarketSellModal.webp">
+  <link rel="prefetch" as="image" href="/images/MarketSellModal.webp"> -->
 
   <meta name="description" content="가챠를 통해 원하는대로 꾸며보아요!" />
   <meta name="keywords" content="Gacha, Adorn, 뽑기, 꾸미기, 캡슐, 가챠" />
